Archive2/2b/9efdfd3d86a19c/output
+ g++ -std=c++11 -Wall -Wextra main.cpp
main.cpp:1:11: error: expected type-specifier before 'X'
 using Y = X = struct _x {
           ^
main.cpp: In function 'int main()':
main.cpp:6:5: error: 'X' was not declared in this scope
     X x(42);
     ^
main.cpp:6:7: error: expected ';' before 'x'
     X x(42);
       ^
