Archive2/2b/9efdfd3d86a19c/main.cpp
using Y = X = struct _x {
    _x(int){}
};

int main(){
    X x(42);
}